# modle

./: .clang-format  .clang-tidy  .cmake-format.yaml  .codespellrc  .dockerignore  .editorconfig  .gersemirc  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  CMakeLists_old.txt  Dockerfile  Dockerfile.debug  Dockerfile.release  LICENSE  README.md  build_container.sh  conanfile.py  conanfile.txt  lsan.supp  setup_conan_environments.sh
docs/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  config.cpp  contacts.cpp  dna.cpp  extr_barrier.cpp  genome.cpp  lefs.cpp  main.cpp  parsers.cpp
src/common/: CMakeLists.txt  cli_utils_impl.hpp  const_map_impl.hpp  math_impl.hpp  numeric_utils_impl.hpp  utils_impl.hpp
src/config/: CMakeLists.txt  git.cpp.in  version.cpp.in
src/contact_matrix/: CMakeLists.txt  contact_matrix_dense_impl.hpp  contact_matrix_dense_safe_impl.hpp  contact_matrix_dense_unsafe_impl.hpp  contact_matrix_internal_impl.hpp  contact_matrix_serde_impl.hpp  contact_matrix_sparse_impl.hpp  contacts_impl.hpp  contacts_safe_impl.hpp  contacts_unsafe_impl.hpp
src/contact_matrix/test/: CMakeLists.txt  contacts_test.cpp  contacts_test.hpp
src/correlation/: CMakeLists.txt  correlation_impl.hpp  correlation_utils.hpp  correlation_utils_impl.hpp
src/correlation/test/: CMakeLists.txt  common.hpp  correlation_test.cpp  correlation_test.hpp  correlation_utils_test.cpp  correlation_utils_test.hpp
src/include/modle/: cli.hpp  config.hpp  contacts.hpp  correlation_test.hpp  dna.hpp  extr_barrier.hpp  genome.hpp  kendall.hpp  lefs.hpp  parsers.hpp  spearman.hpp  utils.hpp
src/interval_tree/: CMakeLists.txt  interval_tree_impl.hpp
src/interval_tree/test/: CMakeLists.txt  interval_tree_test.hpp
src/libio/: 4dn_dcic.cpp  4dn_dcic_impl.hpp  CMakeLists.txt  CMakeLists_libBigWig.txt  bed.cpp  bed_impl.hpp  bigwig.cpp  bigwig_impl.hpp  chr_sizes.cpp  chr_sizes_impl.hpp  chrom_sizes.cpp  chrom_sizes_impl.hpp  compressed_io.cpp  cooler.cpp  cooler_impl.hpp  hdf5.cpp  hdf5_impl.hpp  juicer_contacts.cpp  juicer_contacts_impl.hpp  libarchivexx.cpp
src/libio/test/: CMakeLists.txt  bed_parser_test.hpp  bed_tree_test.hpp  compressed_io_test.hpp  cooler_test.cpp  cooler_test.hpp  hdf5_test.cpp  hdf5_test.hpp  juicer_contacts_test.cpp  juicer_contacts_test.hpp  libarchivexx_test.hpp  test.cpp
src/libmodle/: CMakeLists.txt  CMakeLists_XoshiroCpp.txt  dna.cpp  dna_impl.hpp  extr_barrier.cpp  extr_barrier_impl.hpp  extrusion_barriers_impl.hpp  extrusion_factors_impl.hpp  genome.cpp  genome_impl.hpp  lefs.cpp  lefs_impl.hpp  parsers.cpp  simulation_correct_moves_impl.hpp  simulation_detect_collisions_impl.hpp  simulation_impl.cu  simulation_impl.hpp  simulation_scheduler_impl.hpp  simulation_setup_impl.hpp
src/libmodle/cpu/: CMakeLists.txt  collision_encoding_impl.hpp  context_manager_impl.hpp  dna_impl.hpp  register_contacts.cpp  scheduler_common.cpp  scheduler_perturbate.cpp  scheduler_replay.cpp  scheduler_simulate.cpp  simulation.cpp  simulation_correct_moves.cpp  simulation_detect_collisions.cpp  simulation_detect_collisions_impl.hpp  simulation_impl.hpp  simulation_scheduler.cpp  simulation_scheduler_impl.hpp  simulation_setup.cpp  simulation_setup_impl.hpp  state_logger.cpp
src/libmodle/cu/: CMakeLists.txt  simulation.cu  simulation.cu.bak  simulation_device_functions.cu  simulation_kernels.cu  simulation_scheduler.cpp  simulation_states.cu
src/libmodle/internal/: CMakeLists.txt  dna.cpp  dna_impl.hpp  extrusion_barriers.cpp  extrusion_barriers_impl.hpp  extrusion_factors.cpp  extrusion_factors_impl.hpp  genome.cpp  genome_impl.hpp  setup.cpp
src/libmodle/io/: CMakeLists.txt  libmodle_io_impl.hpp
src/libmodle/test/: CMakeLists.txt  genome_test.hpp  simulation_test.hpp
src/libmodle_io/: CMakeLists.txt  bed.cpp  bed_impl.hpp  bigwig.cpp  bigwig_impl.hpp  chrom_sizes.cpp  compressed_io.cpp  contact_matrix_dense_io_impl.hpp  cooler.cpp  cooler_impl.hpp  cooler_read_impl.hpp  cooler_write_impl.hpp  hdf5.cpp  hdf5_impl.hpp
src/libmodle_io/test/: CMakeLists.txt  bed_parser_test.hpp  bed_tree_test.hpp  compressed_io_test.hpp  cooler_test.hpp  hdf5_test.hpp
src/libparser/: CMakeLists.txt  parsers.cpp
src/libparser/test/: CMakeLists.txt  bed_parser_test.cpp
src/modle/: CMakeLists.txt  cli.cpp  cli.hpp  main.cpp
src/modle_tools/: CMakeLists.txt  annotate_barriers.cpp  cli.cpp  cli.hpp  convert.cpp  convert_impl.hpp  eval.cpp  eval_impl.hpp  filter_barriers.cpp  find_barrier_clusters.cpp  main.cpp  noisify.cpp  noisify_impl.hpp  stats.cpp  stats_impl.hpp  tools.cpp  tools_impl.hpp  transform.cpp
src/stats/: CMakeLists.txt  correlation_impl.hpp  descriptive_impl.hpp  misc_impl.hpp  test_impl.hpp  tests_impl.hpp
src/utils/: CMakeLists.txt  utils_impl.hpp
test/: CMakeLists.txt  catch_main.cpp  test_main.cpp
test/common/: math_test.cpp
test/contact_matrix/: contacts_test.cpp
test/correlation/: correlation_test.cpp  correlation_utils_test.cpp
test/data/: README.md  hg38_chr.bed  hg38_macrochr.bed
test/data/integration_tests/: reference_001.cool
test/integration/: README.md  pyproject.toml
test/interval_tree/: interval_tree_test.cpp
test/libmodle_io/: bed_tree_test.cpp  compressed_io_test.cpp  cooler_test.cpp
test/scripts/: apply_block_filter_to_matrix.ipynb.license  compare_bwigs.py  diff_of_gaussians_skimage.py  generate_2d_gauss_kernel.py  generate_correlation_test_data.py  generate_data_for_bedtree_unit_test.py  generate_reference_2d_gauss_kernels.sh  generate_reference_gaussian_kernel.py  generate_test_data_correlation.sh  generate_test_matrices.sh  modle_integration_test.sh  modle_integration_test_simple.sh  modle_tools_annotate_barriers_integration_test.sh  modle_tools_eval_integration_test.sh  modle_tools_transform_integration_test.sh
test/units/: bed_parser_test.cpp  common.hpp  contacts_test.cpp  correlation_test.cpp  kendall_test.cpp  spearman_test.cpp  utils_test.cpp
utils/compare_contact_matrix/: CMakeLists.txt  main.cpp
utils/modle_tools/: CMakeLists.txt  cli.hpp  convert.hpp  main.cpp  utils.hpp
(+321 files in other folders)
